fixed footer button and form on mobile

--- a/src/components/footer_main.css
+++ b/src/components/footer_main.css
@@ -96,7 +96,7 @@
 /* middle: aniamtion */
 .footer_animation_container {
   font-size: 2.6rem;
-  margin-top: 10vh;
+  margin-top: 1vw;
   margin-bottom: 2vh;
   /* background-color: blue; */
   width:fit-content;
@@ -111,6 +111,7 @@
 .footer_form > div {
   margin-top: 2vh;
 }
+
 
 input[type='text']:hover {
   background-color: rgb(23, 19, 19);
@@ -217,6 +218,7 @@ textarea:hover {
   background-color: rgb(238, 222, 192);
   text-align: center;
   font-size: 1.5vw;
+
 }
 textarea {
   font-size: 1rem;
@@ -257,8 +259,8 @@ textarea {
 
   .footer_animation_container {
     font-size: 1.2rem;
-    margin-top: 3vh;
-    margin-bottom: 2vh;
+    margin-top: 3vw;
+    margin-bottom: 2vw;
     padding-top: 10px;
     padding-bottom: 10px;
     /* background-color: blue; */
@@ -297,19 +299,28 @@ textarea {
     text-align: center;
   }
 
+  .footer_form > div {
+    margin-top: 0vh;
+  }
+
   .footer_button_container {
     margin-right: 2vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 0vw;
+    height: 40px;
+    font-size: 1rem;
+    margin-bottom: 5vw;
+
   }
 
 
   .footer_links_container {
     width: 100%;
-    margin-top: 5vw;
-    padding-top: 5vw;
+    margin-top: 2vw;
+    padding-top:2vw;
     margin-left: 0vw;
     border-left: 0px solid;
     border-top: 1px solid;
@@ -349,3 +360,7 @@ textarea {
 }
 
 
+
+.inputt {
+  margin-bottom: 5px;
+}
